// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextInput/> snapshot should match snapshot 1`] = `
<SSRProvider>
  <TextInput
    aria-label="text-input"
  >
    <div
      className="md-text-input-wrapper"
      data-focus={false}
      data-level="none"
      onClick={[Function]}
    >
      <div
        className="md-text-input-container"
      >
        <input
          aria-label="text-input"
          disabled={false}
          id="test-ID"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          readOnly={false}
          type="text"
        />
      </div>
    </div>
  </TextInput>
</SSRProvider>
`;

exports[`<TextInput/> snapshot should match snapshot with className 1`] = `
<SSRProvider>
  <TextInput
    aria-label="text-input"
    className="example-class"
  >
    <div
      className="md-text-input-wrapper example-class"
      data-focus={false}
      data-level="none"
      onClick={[Function]}
    >
      <div
        className="md-text-input-container"
      >
        <input
          aria-label="text-input"
          disabled={false}
          id="test-ID"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          readOnly={false}
          type="text"
        />
      </div>
    </div>
  </TextInput>
</SSRProvider>
`;

exports[`<TextInput/> snapshot should match snapshot with clearAriaLabel 1`] = `
<SSRProvider>
  <TextInput
    clearAriaLabel="Clear this input"
    id="example-id"
    label="Password"
  >
    <div
      className="md-text-input-wrapper"
      data-focus={false}
      data-level="none"
      onClick={[Function]}
    >
      <label
        htmlFor="test-ID"
        id="desc-test-ID"
      >
        Password
      </label>
      <div
        className="md-text-input-container"
      >
        <input
          aria-labelledby="test-ID"
          disabled={false}
          id="example-id"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          readOnly={false}
          type="text"
        />
      </div>
    </div>
  </TextInput>
</SSRProvider>
`;

exports[`<TextInput/> snapshot should match snapshot with description 1`] = `
<SSRProvider>
  <TextInput
    aria-label="text-input"
    description="some input"
  >
    <div
      className="md-text-input-wrapper"
      data-focus={false}
      data-level="none"
      onClick={[Function]}
    >
      <div
        className="md-text-input-container"
      >
        <input
          aria-label="text-input"
          disabled={false}
          id="test-ID"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          readOnly={false}
          type="text"
        />
      </div>
      <InputMessage
        className="md-text-input-help"
        id={null}
        level="help"
        message="some input"
      >
        <div
          className="md-input-message-wrapper md-text-input-help"
          id={null}
        >
          <div
            className="md-input-message-message"
            message-level="help"
            role="alert"
          >
            <Text
              className="md-input-message--text"
              type="body-secondary"
            >
              <small
                className="md-text-wrapper md-input-message--text"
                data-type="body-secondary"
              >
                some input
              </small>
            </Text>
          </div>
        </div>
      </InputMessage>
    </div>
  </TextInput>
</SSRProvider>
`;

exports[`<TextInput/> snapshot should match snapshot with error text 1`] = `
<SSRProvider>
  <TextInput
    aria-label="text-input"
    messageArr={
      [
        {
          "level": "error",
          "message": "test",
        },
      ]
    }
  >
    <div
      className="md-text-input-wrapper"
      data-focus={false}
      data-level="error"
      onClick={[Function]}
    >
      <div
        className="md-text-input-container"
      >
        <input
          aria-describedby="desc-test-ID"
          aria-label="text-input"
          disabled={false}
          id="test-ID"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          readOnly={false}
          type="text"
        />
      </div>
      <div
        id={null}
      >
        <InputMessage
          className="md-text-input-error"
          id="desc-test-ID"
          key="input-message-0"
          level="error"
          message="test"
        >
          <div
            className="md-input-message-wrapper md-text-input-error"
            id="desc-test-ID"
          >
            <div
              className="md-input-message-message"
              message-level="error"
              role="alert"
            >
              <div
                className="md-input-message--icon"
              >
                <Icon
                  fillColor="var(--mds-color-theme-text-error-normal)"
                  name="warning"
                  scale={16}
                  weight="bold"
                >
                  <div
                    aria-hidden="true"
                    className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      className=""
                      data-autoscale={false}
                      data-scale={16}
                      data-test="warning"
                      height="100%"
                      style={
                        {
                          "fill": "var(--mds-color-theme-text-error-normal)",
                        }
                      }
                      viewBox="0, 0, 32, 32"
                      width="100%"
                    />
                  </div>
                </Icon>
              </div>
              <Text
                className="md-input-message--text"
                type="body-secondary"
              >
                <small
                  className="md-text-wrapper md-input-message--text"
                  data-type="body-secondary"
                >
                  test
                </small>
              </Text>
            </div>
          </div>
        </InputMessage>
      </div>
    </div>
  </TextInput>
</SSRProvider>
`;

exports[`<TextInput/> snapshot should match snapshot with id 1`] = `
<SSRProvider>
  <TextInput
    aria-label="text-input"
    id="example-id"
  >
    <div
      className="md-text-input-wrapper"
      data-focus={false}
      data-level="none"
      onClick={[Function]}
    >
      <div
        className="md-text-input-container"
      >
        <input
          aria-label="text-input"
          disabled={false}
          id="example-id"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          readOnly={false}
          type="text"
        />
      </div>
    </div>
  </TextInput>
</SSRProvider>
`;

exports[`<TextInput/> snapshot should match snapshot with inputMaxLen 1`] = `
<SSRProvider>
  <TextInput
    aria-label="text-input"
    inputMaxLen={4}
  >
    <div
      className="md-text-input-wrapper"
      data-focus={false}
      data-level="none"
      onClick={[Function]}
    >
      <div
        className="md-text-input-container"
      >
        <input
          aria-label="text-input"
          disabled={false}
          id="test-ID"
          maxLength={4}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          readOnly={false}
          type="text"
        />
      </div>
    </div>
  </TextInput>
</SSRProvider>
`;

exports[`<TextInput/> snapshot should match snapshot with isDisabled 1`] = `
<SSRProvider>
  <TextInput
    aria-label="text-input"
    isDisabled={true}
  >
    <div
      className="md-text-input-wrapper"
      data-disabled={true}
      data-focus={false}
      data-level="none"
      onClick={[Function]}
    >
      <div
        className="md-text-input-container"
      >
        <input
          aria-label="text-input"
          disabled={true}
          id="test-ID"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          readOnly={false}
          type="text"
        />
      </div>
    </div>
  </TextInput>
</SSRProvider>
`;

exports[`<TextInput/> snapshot should match snapshot with label 1`] = `
<SSRProvider>
  <TextInput
    id="example-id"
    label="Password"
  >
    <div
      className="md-text-input-wrapper"
      data-focus={false}
      data-level="none"
      onClick={[Function]}
    >
      <label
        htmlFor="test-ID"
        id="desc-test-ID"
      >
        Password
      </label>
      <div
        className="md-text-input-container"
      >
        <input
          aria-labelledby="test-ID"
          disabled={false}
          id="example-id"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          readOnly={false}
          type="text"
        />
      </div>
    </div>
  </TextInput>
</SSRProvider>
`;

exports[`<TextInput/> snapshot should match snapshot with style 1`] = `
<SSRProvider>
  <TextInput
    aria-label="text-input"
    style={
      {
        "color": "pink",
      }
    }
  >
    <div
      className="md-text-input-wrapper"
      data-focus={false}
      data-level="none"
      onClick={[Function]}
      style={
        {
          "color": "pink",
        }
      }
    >
      <div
        className="md-text-input-container"
      >
        <input
          aria-label="text-input"
          disabled={false}
          id="test-ID"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          readOnly={false}
          type="text"
        />
      </div>
    </div>
  </TextInput>
</SSRProvider>
`;
